--- a/static/bundle.css
+++ b/static/bundle.css
@@ -453,7 +453,7 @@ template {
   display: none; }
 
 body {
-  font-family: "Open Sans", "Helvetica", "Arial", sans-serif; }
+  font-family: "ubuntu", "Helvetica", "Arial", sans-serif; }
 
 main {
   line-height: 1.4; }
@@ -695,20 +695,24 @@ img {
 .main-header {
   text-align: center;
   text-transform: uppercase; }
-  .main-header .active {
-    background-color: #ff0883;
-    color: white; }
+  @media screen and (max-width: 500px) {
+    .main-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      flex-direction: column; } }
   @media screen and (min-width: 900px) {
     .main-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      flex-wrap: wrap; } }
+      flex-wrap: wrap;
+      flex-direction: row; } }
   .main-header a {
     padding: .6rem 1.2rem;
     border-radius: 50px;
     font-size: 1.2rem;
-    display: block;
     text-decoration: none;
     color: #ff0883;
     margin-bottom: 4px;
@@ -716,20 +720,19 @@ img {
     transition: all 200ms linear; }
     @media screen and (min-width: 500px) {
       .main-header a {
-        font-size: calc(1.275rem + 0.3vw);
-        display: inline-block; } }
+        font-size: calc(1.275rem + 0.3vw); } }
   @media screen and (min-width: 500px) and (min-width: 1200px) {
     .main-header a {
       font-size: 1.5rem; } }
     @media screen and (min-width: 900px) {
       .main-header a {
-        font-size: calc(1.305rem + 0.66vw); } }
-  @media screen and (min-width: 900px) and (min-width: 1200px) {
-    .main-header a {
-      font-size: 1.8rem; } }
+        font-size: 1.1rem; } }
     .main-header a:hover:not(.logo) {
       color: white;
       background-color: #fa52d1; }
+    .main-header a.active {
+      color: white;
+      background-color: #ff0883; }
   .main-header a.logo {
     display: block; }
 
