--- a/static/fonts.css
+++ b/static/fonts.css
@@ -1,47 +1,47 @@
-/* === Open Sans - 300 */
+/* === Ubuntu - 300 */
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Ubuntu';
 	font-style: normal;
 	font-weight: 300;
 	font-display: swap;
-	src: url("./font/OpenSans-Light.eot");
-	src: local("Open Sans Light"),
-		local("OpenSans-Light"),
-		url("./font/OpenSans-Light.eot") format("embedded-opentype"),
-		url("./font/OpenSans-Light.woff2") format("woff2"),
-		url("./font/OpenSans-Light.woff") format("woff"),
-		url("./font/OpenSans-Light.ttf") format("truetype"),
-		url("./font/OpenSans-Light.svg") format("svg");
+	src: url("./font/Ubuntu-Light.eot");
+	src: local("Ubuntu Light"),
+		local("Ubuntu-Light"),
+		url("./font/Ubuntu-Light.eot") format("embedded-opentype"),
+		url("./font/Ubuntu-Light.woff2") format("woff2"),
+		url("./font/Ubuntu-Light.woff") format("woff"),
+		url("./font/Ubuntu-Light.ttf") format("truetype"),
+		url("./font/Ubuntu-Light.svg") format("svg");
 }
 
-/* === Open Sans - regular */
+/* === Ubuntu - regular */
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Ubuntu';
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("./font/OpenSans-Regular.eot");
-	src: local("Open Sans Regular"),
-		local("OpenSans-Regular"),
-		url("./font/OpenSans-Regular.eot") format("embedded-opentype"),
-		url("./font/OpenSans-Regular.woff2") format("woff2"),
-		url("./font/OpenSans-Regular.woff") format("woff"),
-		url("./font/OpenSans-Regular.ttf") format("truetype"),
-		url("./font/OpenSans-Regular.svg") format("svg");
+	src: url("./font/Ubuntu-Regular.eot");
+	src: local("Ubuntu Regular"),
+		local("Ubuntu-Regular"),
+		url("./font/Ubuntu-Regular.eot") format("embedded-opentype"),
+		url("./font/Ubuntu-Regular.woff2") format("woff2"),
+		url("./font/Ubuntu-Regular.woff") format("woff"),
+		url("./font/Ubuntu-Regular.ttf") format("truetype"),
+		url("./font/Ubuntu-Regular.svg") format("svg");
 }
 
-/* === Open Sans - 700 */
+/* === Ubuntu - 700 */
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Ubuntu';
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url("./font/OpenSans-Bold.eot");
-	src: local("Open Sans Bold"),
-		local("OpenSans-Bold"),
-		url("./font/OpenSans-Bold.eot") format("embedded-opentype"),
-		url("./font/OpenSans-Bold.woff2") format("woff2"),
-		url("./font/OpenSans-Bold.woff") format("woff"),
-		url("./font/OpenSans-Bold.ttf") format("truetype"),
-		url("./font/OpenSans-Bold.svg") format("svg");
+	src: url("./font/Ubuntu-Bold.eot");
+	src: local("Ubuntu Bold"),
+		local("Ubuntu-Bold"),
+		url("./font/Ubuntu-Bold.eot") format("embedded-opentype"),
+		url("./font/Ubuntu-Bold.woff2") format("woff2"),
+		url("./font/Ubuntu-Bold.woff") format("woff"),
+		url("./font/Ubuntu-Bold.ttf") format("truetype"),
+		url("./font/Ubuntu-Bold.svg") format("svg");
 }
